// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"doc => {
  return doc.series === series && doc.debut === debut;
};"
`;

exports[` 2`] = `
"doc => {
  return doc.debut === debut && doc.series === series;
};"
`;

exports[` 3`] = `
"doc => {
  return doc.debut === debut && doc.series === series;
};"
`;
